--- a/lib/workshops_app_web/templates/page/index.html.eex
+++ b/lib/workshops_app_web/templates/page/index.html.eex
@@ -13,4 +13,7 @@
   <div class='col-md-9'>
     <input type='text' id='message' class='form-control' placeholder='Message' />
   </div>
+  <div>
+    <input type='file' id='file-input' class='form-control' />
+  </div>
 </div>
